<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DesignAdaptable1Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:autofillHints=""
            android:ems="11"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText"
            android:layout_alignParentEnd="true"
            android:background="@color/colorAccent"
            android:text="@string/button" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/text" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/frambuesas"
            android:text="@string/back" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_back"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_launcher_foreground"
            android:text="@string/button" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_back"
            android:layout_alignEnd="@+id/button"
            android:background="@drawable/mangos"
            android:text="@string/next" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>